--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -23,29 +23,48 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/photo"
+        <FrameLayout
             android:layout_width="0dp"
-            android:src="@drawable/ic_burst_mode_black_24dp"
-            android:background="@null"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_gravity="bottom">
+
+            <ImageButton
+                android:id="@+id/photo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:background="@null"
+                android:src="@drawable/ic_burst_mode_black_24dp" />
+
+            <Button
+                android:id="@+id/clear"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_gravity="end|top"
+                android:layout_margin="3dp"
+                android:background="@drawable/ic_camera_alt_black_24dp"
+                android:visibility="gone" />
+        </FrameLayout>
 
         <EditText
             android:id="@+id/content"
             android:layout_width="0dp"
             android:hint="Write a message..."
-            android:layout_height="match_parent"
-            android:layout_weight="5" />
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:maxLines="5"/>
 
         <ImageButton
             android:id="@+id/send"
             android:layout_width="0dp"
             android:src="@drawable/ic_send_black_24dp"
             android:background="@null"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="42dp"
+            android:layout_marginBottom="4dp"
+            android:layout_weight="1"
+            android:layout_gravity="bottom"/>
     </LinearLayout>
 </LinearLayout>
